# tailor-my-resume

./: .gitignore  README.md  crawl-and-prompt.sh  crawl.py  pyproject.toml  tailor.sh
